--- a/DeskThing/index.html
+++ b/DeskThing/index.html
@@ -4,8 +4,11 @@
     <link rel="preload" as="image" href="/images/appstart.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=800, height=480, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="true" />
-    <title>Superbird</title>
+    <title>DeskThing</title>
     <script>Object.defineProperty(window, "_vite_is_modern_browser", { value: false, writable: false })</script>
   </head>
   <body>
