--- a/DeskThingServer/src/renderer/index.html
+++ b/DeskThingServer/src/renderer/index.html
@@ -9,9 +9,8 @@
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
     />
   </head>
-
-  <body>
-    <div id="root"></div>
+  <body style="overflow: hidden; background-color: black">
+    <div id="root"><div style="width: 100vw; height: 100vh; display:flex;align-items: center;justify-content: center;"><h1 style="color:white">Loading Deskthing...</h1></div></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
