--- a/DeskThing/index.html
+++ b/DeskThing/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="preload" as="image" href="/images/appstart.png" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=800, height=480, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
