Somewhat functional v0.7.0 pre-release

--- a/DeskThing/index.html
+++ b/DeskThing/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id="root"><img id="appstart-img" width="800" height="480" src="/images/appstart.png" alt="appstart" /></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script src="/manifest.js"></script>
     <script>
       const appstartImg = document.getElementById('appstart-img');
       appstartImg.alt = `${appstartImg.src}`;
